--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -28,19 +28,32 @@
       "     Saga twilight: 4\n",
       "     Saga tolkien: 7\n",
       "     Saga harry_potter: 7\n",
-      "A pessoa: Eduardo , Alugou o livro: O Retorno do Rei\n",
-      "16\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[68], line 125\u001b[0m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m livro_alugado \u001b[38;5;129;01min\u001b[39;00m livros:\n\u001b[0;32m    124\u001b[0m     livro_alugado \u001b[38;5;241m=\u001b[39m sortear_livro \u001b[38;5;129;01min\u001b[39;00m livros\n\u001b[1;32m--> 125\u001b[0m     livros_restantes \u001b[38;5;241m=\u001b[39m \u001b[43mlivros\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mlivro_alugado\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;28mprint\u001b[39m(livros_restantes)\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m16\u001b[39m):\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+      "O livro escolhido é: Os Filhos de Húrin\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: Harry Potter e a Ordem da Fênix\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: A Sociedade do Anel\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "Desculpe, o livro não está disponível\n",
+      "O livro escolhido é: A Sociedade do Anel\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "Desculpe, o livro não está disponível\n",
+      "O livro escolhido é: Harry Potter e a Ordem da Fênix\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: Crepúsculo\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: O Retorno do Rei\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "Desculpe, o livro não está disponível\n",
+      "O livro escolhido é: O Retorno do Rei\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: Lua Nova\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Eclipse', 'Amanhecer']\n",
+      "O livro escolhido é: As Duas Torres\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'O Silmarillion', 'Contos Inacabados', 'Eclipse', 'Amanhecer']\n",
+      " \u001b[31m\u001b[1m Lista alugados é: \u001b[0m []\n",
+      " \u001b[32m\u001b[1m O nº de livros disponíveis: \u001b[0m 18\n",
+      "Saldo final da biblioteca é de R$ 70.00\n"
      ]
     }
    ],
@@ -133,69 +146,47 @@
     "\n",
     "\n",
     "#desafio final\n",
-    "import random \n",
-    "livros = [\n",
-    "    \"Harry Potter e a Pedra Filosofal\",\n",
-    "    \"Harry Potter e a Câmara Secreta\",\n",
-    "    \"Harry Potter e o Prisioneiro de Azkaban\",\n",
-    "    \"Harry Potter e o Cálice de Fogo\",\n",
-    "    \"Harry Potter e a Ordem da Fênix\",\n",
-    "    \"Harry Potter e o Enigma do Príncipe\",\n",
-    "    \"Harry Potter e as Relíquias da Morte\"\n",
-    "    \"O Hobbit\",\n",
-    "    \"A Sociedade do Anel\",\n",
-    "    \"As Duas Torres\",\n",
-    "    \"O Retorno do Rei\",\n",
-    "    \"O Silmarillion\",\n",
-    "    \"Contos Inacabados\",\n",
-    "    \"Os Filhos de Húrin\"\n",
-    "    \"Crepúsculo\",\n",
-    "    \"Lua Nova\",\n",
-    "    \"Eclipse\",\n",
-    "    \"Amanhecer\"\n",
-    "]\n",
-    "\n",
+    "import random\n",
     "pessoas = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
     "saldo = 0\n",
+    "catalogo = livros_harry_potter + livros_tolkien + livros_twilight\n",
     "\n",
-    "def sortear_livro(livros: list[str]) -> str:\n",
-    "    return random.choice(livros)\n",
     "\n",
-    "print ('A pessoa: ' + pessoas [ random.randrange ( len ( pessoas ))],\n",
-    "      ', Alugou o livro: ' + livros [ random.randrange ( len ( livros ))] )\n",
+    "def sortear_livro(catalogo: list[str]) -> str:\n",
+    "    return random.choice(catalogo)\n",
     "\n",
-    "numero_de_livros_totais= len(livros)\n",
-    "print(numero_de_livros_totais)\n",
-    "\n",
-    "for livro_alugado in livros:\n",
-    "    livro_alugado = sortear_livro in livros\n",
-    "    livros_restantes = livros -[livro_alugado]\n",
-    "    print(livros_restantes)\n",
-    "\n",
-    "for index in range(0,16):\n",
-    "    livro_alugado = livros [ random.randrange ( len ( livros ))]\n",
-    "    if livro_alugado in livros:\n",
-    "        livros = livros [-livro_alugado]\n",
-    "        print(f'O livro alugado foi {livro_alugado} e ele está indisponível')\n",
-    "    else:\n",
-    "        print(\"teste\")\n",
-    "   # livros_restantes = livros [-livro_alugado] aaaaaa n vai pq é str\n",
-    "\n",
-    "print(livro_alugado)\n",
     "def alugar_livros():\n",
+    "    livros_alugados = []\n",
+    "    livros_disponiveis = []\n",
+    "    saldo = 0\n",
+    "    for livro in catalogo:\n",
+    "        livros_disponiveis.append(livro)\n",
     "\n",
-    "    # preencher desafio aqui\n",
-    "    pass\n",
+    "    for index in pessoas:\n",
+    "        livro_escolhido = catalogo [random.randrange(len(catalogo))]\n",
+    "        if livro_escolhido in livros_alugados:\n",
+    "            print(f\"Desculpe, o livro não está disponível\")\n",
+    "        else:\n",
+    "            livros_alugados.append(livro_escolhido)\n",
+    "            livros_disponiveis.remove(livro_escolhido)\n",
+    "        print(f\"O livro escolhido é: {livro_escolhido}\")\n",
+    "        print(f\" {color_green}{style} Lista de disponíveis é: \\033[0m {livros_disponiveis}\")\n",
+    "        \n",
+    "    for livro in livros_alugados:\n",
+    "        livros_disponiveis.append(livro)\n",
+    "        saldo = saldo + 10\n",
+    "    livros_alugados = [] \n",
+    "    numero_livros_disp = len(livros_disponiveis)\n",
+    "    print(f\" {color_red}{style} Lista alugados é: \\033[0m {livros_alugados}\")\n",
+    "    print(f\" {color_green}{style} O nº de livros disponíveis: \\033[0m {numero_livros_disp}\")\n",
+    "    print(f\"Saldo final da biblioteca é de R$ {saldo:.2f}\")\n",
     "\n",
-    "\n",
-    "alugar_livros()\n",
-    "print(f\"Saldo final da biblioteca é de R$ {saldo:.2f}\")\n",
-    "\n"
+    "alugar_livros()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +221,7 @@
     "numero_de_livros_tolk = len(livros_tolkien)\n",
     "numero_tolk_div = numero_de_livros_tolk / 2\n",
     "livro_tolk_arredond = math.floor(numero_tolk_div)\n",
+    "\n",
     "livro_tolk_meio = livros_tolkien[-livro_tk_meio]\n",
     "\n",
     "if numero_tolk_div.is_integer():\n",
