juliana desafio 4 bonus

--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -28,32 +28,38 @@
       "     Saga twilight: 4\n",
       "     Saga tolkien: 7\n",
       "     Saga harry_potter: 7\n",
-      "O livro escolhido é: Os Filhos de Húrin\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: Harry Potter e a Ordem da Fênix\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: A Sociedade do Anel\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Ana escolhei o livro é: Harry Potter e o Cálice de Fogo\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Os Filhos de Húrin', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Bruno escolhei o livro é: Os Filhos de Húrin\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'A Sociedade do Anel', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Carlos escolhei o livro é: A Sociedade do Anel\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Diana escolhei o livro é: Harry Potter e o Enigma do Príncipe\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Eduardo escolhei o livro é: Amanhecer\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
+      " A pessoa Fernanda escolhei o livro é: Harry Potter e a Câmara Secreta\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
       "Desculpe, o livro não está disponível\n",
-      "O livro escolhido é: A Sociedade do Anel\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
+      " A pessoa Gustavo escolhei o livro é: Harry Potter e o Cálice de Fogo\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
+      " A pessoa Helena escolhei o livro é: As Duas Torres\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
+      " A pessoa Igor escolhei o livro é: Harry Potter e as Relíquias da Morte\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'O Hobbit', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
       "Desculpe, o livro não está disponível\n",
-      "O livro escolhido é: Harry Potter e a Ordem da Fênix\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: Crepúsculo\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: O Retorno do Rei\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "Desculpe, o livro não está disponível\n",
-      "O livro escolhido é: O Retorno do Rei\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Lua Nova', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: Lua Nova\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'As Duas Torres', 'O Silmarillion', 'Contos Inacabados', 'Eclipse', 'Amanhecer']\n",
-      "O livro escolhido é: As Duas Torres\n",
-      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e a Câmara Secreta', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e o Cálice de Fogo', 'Harry Potter e o Enigma do Príncipe', 'Harry Potter e as Relíquias da Morte', 'O Hobbit', 'O Silmarillion', 'Contos Inacabados', 'Eclipse', 'Amanhecer']\n",
-      " \u001b[31m\u001b[1m Lista alugados é: \u001b[0m []\n",
-      " \u001b[32m\u001b[1m O nº de livros disponíveis: \u001b[0m 18\n",
-      "Saldo final da biblioteca é de R$ 70.00\n"
+      " A pessoa Julia escolhei o livro é: Harry Potter e o Cálice de Fogo\n",
+      " \u001b[32m\u001b[1m Lista de disponíveis é: \u001b[0m ['Harry Potter e a Pedra Filosofal', 'Harry Potter e o Prisioneiro de Azkaban', 'Harry Potter e a Ordem da Fênix', 'O Hobbit', 'O Retorno do Rei', 'O Silmarillion', 'Contos Inacabados', 'Crepúsculo', 'Lua Nova', 'Eclipse']\n",
+      "livro Harry Potter e o Cálice de Fogo não foi devolvido pela pessoa Ana!!!!!!\n",
+      "livro Os Filhos de Húrin não foi devolvido pela pessoa Bruno!!!!!!\n",
+      "livro Harry Potter e o Enigma do Príncipe não foi devolvido pela pessoa Diana!!!!!!\n",
+      "livro Amanhecer não foi devolvido pela pessoa Eduardo!!!!!!\n",
+      "livro Harry Potter e a Câmara Secreta não foi devolvido pela pessoa Fernanda!!!!!!\n",
+      "livro As Duas Torres não foi devolvido pela pessoa Helena!!!!!!\n",
+      "livro Harry Potter e as Relíquias da Morte não foi devolvido pela pessoa Igor!!!!!!\n",
+      " \u001b[31m\u001b[1m Lista alugados é: \u001b[0m ['Harry Potter e o Cálice de Fogo', 'Os Filhos de Húrin', 'Harry Potter e o Enigma do Príncipe', 'Amanhecer', 'Harry Potter e a Câmara Secreta', 'As Duas Torres', 'Harry Potter e as Relíquias da Morte']\n",
+      " \u001b[32m\u001b[1m O nº de livros disponíveis: \u001b[0m 11\n",
+      "Saldo final da biblioteca é de R$ 10.00\n"
      ]
     }
    ],
@@ -158,24 +164,34 @@
     "def alugar_livros():\n",
     "    livros_alugados = []\n",
     "    livros_disponiveis = []\n",
+    "    pessoas_q_alugaram = []\n",
     "    saldo = 0\n",
     "    for livro in catalogo:\n",
     "        livros_disponiveis.append(livro)\n",
     "\n",
-    "    for index in pessoas:\n",
+    "    for pessoa in pessoas:\n",
     "        livro_escolhido = catalogo [random.randrange(len(catalogo))]\n",
     "        if livro_escolhido in livros_alugados:\n",
     "            print(f\"Desculpe, o livro não está disponível\")\n",
     "        else:\n",
     "            livros_alugados.append(livro_escolhido)\n",
     "            livros_disponiveis.remove(livro_escolhido)\n",
-    "        print(f\"O livro escolhido é: {livro_escolhido}\")\n",
+    "            pessoas_q_alugaram.append(pessoa)\n",
+    "        print(f\" A pessoa {pessoa} escolhei o livro é: {livro_escolhido}\")\n",
     "        print(f\" {color_green}{style} Lista de disponíveis é: \\033[0m {livros_disponiveis}\")\n",
-    "        \n",
-    "    for livro in livros_alugados:\n",
-    "        livros_disponiveis.append(livro)\n",
-    "        saldo = saldo + 10\n",
-    "    livros_alugados = [] \n",
+    "        numero_pess_alugaram = len(pessoas_q_alugaram)\n",
+    "    livros_devolvidos = []    \n",
+    "    for index in range(0,numero_pess_alugaram):\n",
+    "        pessoa = pessoas_q_alugaram[index]\n",
+    "        livro = livros_alugados[index]\n",
+    "        if random.randint(0, 10) % 2 == 0:\n",
+    "            livros_disponiveis.append(livro)\n",
+    "            livros_devolvidos.append(livro) \n",
+    "            saldo = saldo + 10\n",
+    "        else:\n",
+    "            print(f'livro {livro} não foi devolvido pela pessoa {pessoa}!!!!!!')\n",
+    "    for livro in livros_devolvidos:\n",
+    "        livros_alugados.remove(livro)\n",
     "    numero_livros_disp = len(livros_disponiveis)\n",
     "    print(f\" {color_red}{style} Lista alugados é: \\033[0m {livros_alugados}\")\n",
     "    print(f\" {color_green}{style} O nº de livros disponíveis: \\033[0m {numero_livros_disp}\")\n",
