Traduzido os challenges das aulas 0002 e 0003 para pt-br

--- a/0003.ipynb
+++ b/0003.ipynb
@@ -92,33 +92,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NEW Challenge \n",
+    "### NOVO Desafio\n",
     "\n",
-    "NOTE: this is the same challenge from lesson 0003 with some minor add-ons\n",
+    "NOTA: este é o mesmo desafio da aula 0003 com alguns pequenos acréscimos\n",
     "\n",
-    "As a teacher, you are responsible for 40 students. The students have just taken a test and now you have their 40 grades \n",
-    "You want to display a table with the students **name**, **grade** and **status**, where status indicates if the students has passed the test or not.\n",
+    "Como professor, você é responsável por 40 alunos. Os alunos acabaram de fazer um teste e agora você tem as notas dos 40 alunos.\n",
+    "Você quer exibir uma tabela com o **nome** do aluno, a **nota** e o **status**, onde o status indica se o aluno passou no teste ou não.\n",
     "\n",
-    "Use the knowledge of for loops, formatted print and if statements to build this table that will be displayed in the python notebook output\n",
+    "Use o conhecimento de loops for, impressão formatada e declarações if para construir esta tabela que será exibida na saída do notebook Python.\n",
     "\n",
-    "Follow this requirements from lesson 0002:\n",
-    " - the table must have a header with the three column\n",
-    " - each row corresponds to a student\n",
-    " - grades are float number from 0 to 10, with one decimal precision\n",
-    " - the test passing grade is 5\n",
-    " - the `students` and `grades` are already sorted such as *the **students[i]** has **grades[i]***\n",
-    " - add a final row with the entire class **average grade**\n",
+    "Siga estes requisitos da aula 0002:\n",
+    " - a tabela deve ter um cabeçalho com as três colunas\n",
+    " - cada linha corresponde a um aluno\n",
+    " - as notas são números float de 0 a 10, com uma precisão de uma casa decimal\n",
+    " - a nota de aprovação do teste é 5\n",
+    " - os `students` e `grades` já estão ordenados de forma que *o **students[i]** tem **grades[i]***\n",
+    " - adicione uma linha final com a **média da turma**\n",
     " \n",
-    "New lesson 0003 requirements  \n",
-    " - adjust column padding so all column are printed with the same width\n",
-    " - if a student has passed, it should be show in table **PASSED** in green\n",
-    " - if a student has NOT passed, it should be show in table **FAILED** in red\n",
-    " - print the list if names of students that have NOT passed at the end, so we can send a letter for their parents :evil: \n",
+    "Novos requisitos da aula 0003:\n",
+    " - ajuste o preenchimento das colunas para que todas as colunas sejam impressas com a mesma largura\n",
+    " - se um aluno passou, deve ser mostrado na tabela como **PASSED** em verde\n",
+    " - se um aluno NÃO passou, deve ser mostrado na tabela como **FAILED** em vermelho\n",
+    " - imprima a lista de nomes dos alunos que NÃO passaram no final, para que possamos enviar uma carta para seus pais :evil:\n",
     "\n",
-    "#### Formatted print padding tip\n",
-    " - `i:<10` => justify text to the left within 10 characters width\n",
-    " - `i:>10` => justify text to the right within 10 characters width\n",
-    " - `i:^10` => justify text to the center within 10 characters width"
+    "#### Dica de preenchimento de impressão formatada\n",
+    " - `i:<10` => justifica o texto à esquerda dentro de uma largura de 10 caracteres\n",
+    " - `i:>10` => justifica o texto à direita dentro de uma largura de 10 caracteres\n",
+    " - `i:^10` => justifica o texto ao centro dentro de uma largura de 10 caracteres"
    ]
   },
   {
