--- a/0002.ipynb
+++ b/0002.ipynb
@@ -45,29 +45,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge\n",
+    "### Desafio\n",
     "\n",
-    "As a teacher, you are responsible for 40 students. The students have just taken a test and now you have their 40 grades \n",
-    "You want to display a table with the students **name**, **grade** and **status**, where status indicates if the students has passed the test or not.\n",
+    "Como professor, você é responsável por 40 alunos. Os alunos acabaram de fazer um teste e agora você tem as notas dos 40 alunos.\n",
+    "Você quer exibir uma tabela com o **nome** do aluno, a **nota** e o **status**, onde o status indica se o aluno passou no teste ou não.\n",
     "\n",
-    "Use the knowledge of for loops, formatted print and if statements to build this table that will be displayed in the python notebook output\n",
+    "Use o conhecimento de loops for, impressão formatada e declarações if para construir esta tabela que será exibida na saída do notebook Python.\n",
     "\n",
-    "Follow this requirements:\n",
-    " - the table must have a header with the three column\n",
-    " - each row corresponds to a student\n",
-    " - grades are float number from 0 to 10, with one decimal precision\n",
-    " - the test passing grade is 5\n",
-    " - the `students` and `grades` are already sorted such as *the **students[i]** has **grades[i]***\n",
+    "Siga estes requisitos:\n",
+    " - a tabela deve ter um cabeçalho com as três colunas\n",
+    " - cada linha corresponde a um aluno\n",
+    " - as notas são números float de 0 a 10, com uma precisão de uma casa decimal\n",
+    " - a nota de aprovação do teste é 5\n",
+    " - os `students` e `grades` já estão ordenados de forma que *o **students[i]** tem **grades[i]***\n",
     "\n",
-    "Bonus:\n",
-    " - add a final row with the entire class **average grade**\n",
-    " - adjust column padding so all column are printed with the same width\n",
+    "Bônus:\n",
+    " - adicione uma linha final com a **média da turma**\n",
+    " - ajuste o preenchimento das colunas para que todas as colunas sejam impressas com a mesma largura\n",
     "\n",
     "\n",
-    "#### Formatted print padding tip\n",
-    " - `i:<10` => justify text to the left within 10 characters width\n",
-    " - `i:>10` => justify text to the right within 10 characters width\n",
-    " - `i:^10` => justify text to the center within 10 characters width"
+    "#### Dica de preenchimento de impressão formatada\n",
+    " - `i:<10` => justifica o texto à esquerda dentro de uma largura de 10 caracteres\n",
+    " - `i:>10` => justifica o texto à direita dentro de uma largura de 10 caracteres\n",
+    " - `i:^10` => justifica o texto ao centro dentro de uma largura de 10 caracteres"
    ]
   },
   {
