--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,6 +9,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Medusa', 'Gato', '5', '8', 'Helena'], ['Mendel', 'Pássaro', '3', '2.5', 'Fernanda'], ['Mendel', 'Réptil', '5', '2', 'Diana'], ['Medusa', 'Pássaro', '3', '15', 'Julia']]\n",
+      "_______ Remoção___________\n",
+      "|   Nome Pet        Espécie         Idade        Peso(kg)         Dono      |\n",
+      "[['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Medusa', 'Gato', '5', '8', 'Helena'], ['Mendel', 'Pássaro', '3', '2.5', 'Fernanda'], ['Mendel', 'Réptil', '5', '2', 'Diana']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "align = \"^\" # ['<', '>', '^'] \n",
+    "width = 15\n",
+    "color_green = \"\\33[32m\"\n",
+    "color_y= \"\\33[33m\"\n",
+    "color_red= \"\\33[31m\"\n",
+    "color_b= \"\\33[36m\"\n",
+    "style = \"\\33[1m\"\n",
+    "background = \"\\33[47m\"\n",
+    "\n",
+    "nomes_pets = [\"Dona Florinda\", \"Matilde\", \"Medusa\", \"Einsten\", \"Mendel\"]\n",
+    "espécies = [\"Cachorro\", \"Gato\", \"Pássaro\", \"Réptil\", \"Peixe\"]\n",
+    "idades = [\"2\", \"5\", \"1\", \"8\", \"3\"]\n",
+    "pesos = [\"2.5\", \"2\", \"1\", \"8\", \"15\"]\n",
+    "nomes_donos = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
+    "\n",
+    "animais = [\n",
+    "    [\"Koda\", \"Cão\", 6, 18, \"Carlos\"],\n",
+    "    [\"Murphy\", \"Gato\", 6, 5.5, \"Juliana\"],\n",
+    "]\n",
+    "\n",
+    "def adicionar_pet ():\n",
+    "    for index in range(0,4):\n",
+    "        nome_pet = nomes_pets [random.randrange(len(nomes_pets))]\n",
+    "        espécie = espécies [random.randrange(len(espécies))]\n",
+    "        idade = idades [random.randrange(len(idades))]\n",
+    "        peso = pesos [random.randrange(len(pesos))]\n",
+    "        nome_dono = nomes_donos [random.randrange(len(nomes_donos))]\n",
+    "\n",
+    "        novo_pet = [nome_pet, espécie, idade, peso, nome_dono]\n",
+    "        animais.append(novo_pet)\n",
+    "\n",
+    "\n",
+    "adicionar_pet()\n",
+    "\n",
+    "print(f'{animais}')\n",
+    "print(\"_______ Remoção___________\")\n",
+    "\n",
+    "def remover_pet ():\n",
+    "    del(animais[-1])\n",
+    "\n",
+    "\n",
+    "remover_pet()\n",
+    "\n",
+    "message1 = 'Nome Pet'\n",
+    "message2 = 'Espécie'\n",
+    "message3 = 'Idade'\n",
+    "message4 = 'Peso(kg)'\n",
+    "message5 = 'Dono'\n",
+    "\n",
+    "print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')  \n",
+    "print(f'{animais}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Nome Pet  Espécie    Idade    Peso(kg)    Dono   |\n",
+      "['koda', 'cao', 6, '18', 'carlos']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# desafio extra pessoa hahaha pet shop (usar um FOR OU WHILE)\n",
+    "\n",
+    "nome = str(input('Qual o nome do seu pet?'))\n",
+    "espécie = str(input('Qual a espécie do seu pet?'))\n",
+    "idade = int(input('Qual idade do seu pet?'))\n",
+    "peso = str(input('Qual o peso do seu pet(em kg)?'))\n",
+    "nome_dono = str(input('Qual é o seu nome(nome do dono)?'))\n",
+    "\n",
+    "animal = [nome, espécie, idade, peso, nome_dono]\n",
+    "message1 = 'Nome Pet'\n",
+    "message2 = 'Espécie'\n",
+    "message3 = 'Idade'\n",
+    "message4 = 'Peso(kg)'\n",
+    "message5 = 'Dono'\n",
+    "align = \"^\" # ['<', '>', '^'] \n",
+    "width = 10\n",
+    "color_green = \"\\33[32m\"\n",
+    "color_y= \"\\33[33m\"\n",
+    "color_red= \"\\33[31m\"\n",
+    "color_b= \"\\33[36m\"\n",
+    "style = \"\\33[1m\"\n",
+    "background = \"\\33[47m\"\n",
+    "print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')  \n",
+    "print(f'{animal}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 250,
    "metadata": {},
    "outputs": [
